# rogueRecall

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  NOTICE  PRODUCT.md  README.md  RIGHTS.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-audit.txt
.github/workflows/: v1-qualification.yml
docs/adr/: 0001-record-literary-eras-without-v1-quotas.md  0002-version-response-lexer-error-recovery.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/corpus/: CASE_REVIEW_CHECKLIST.md  CONTRIBUTOR_ATTESTATION.md  README.md  RELEASE_CURATOR_CHECKLIST.md  WRITTEN_PERMISSION.md
docs/qualification/: README.md
docs/research/: benchmark-corpus-source-research.md  candidate-code-source-manifest.json  candidate-literary-source-manifest.json  candidate-source-roster.md  lawful-public-corpus-boundaries.md  objective-text-leak-grading.md  traceable-target-system-execution.md
prototypes/operator-workflow/: README.md  app.js  index.html  styles.css
scripts/: browser_qualification.py  generate_grader_validation.py
src/roguerecall/: __init__.py  benchmark.py  candidate_prep.py  canonical.py  cases.py  cli.py  corpus.py  dashboard.py  dashboard_data.py  dashboard_exports.py  engine.py  (+8 more)
tests/: test_benchmark.py  test_candidate_prep.py  test_corpus.py  test_corpus_intake.py  test_dashboard.py  test_deleted_surfaces.py  test_evaluation_cases.py  test_grading.py  test_operator.py  test_packaging.py  test_qualification.py  test_qualification_evidence.py  test_record_validation.py  test_releases.py  test_synthetic_run.py  test_target_run.py  test_targets.py
(+102 files in other folders)
